--- a/languages/fsharp/config.json
+++ b/languages/fsharp/config.json
@@ -14,6 +14,16 @@
         "uuid": "9c2aad8a-53ee-11ea-8d77-2e728ce88125",
         "concepts": ["strings-basic"],
         "prerequisites": []
+      },
+      {
+        "slug": "numbers",
+        "uuid": "6ea2765e-5885-11ea-82b4-0242ac130003",
+        "concepts": [
+          "numbers-basic",
+          "type-conversion-numbers",
+          "conditionals-if"
+        ],
+        "prerequisites": []
       }
     ],
     "practice": []
